test/files/continuations-neg/t5314-missing-result-type.check
t5314-missing-result-type.scala:6: error: method bar has return statement; needs result type
  def bar(x:Int) = return foo(x)
                   ^
one error found
